--- a/inter.html
+++ b/inter.html
@@ -1,13 +1,9 @@
-<html>
-<head></head>
-<body>
-<div id="display"></div>
-<script type="text/javascript">
-	window.setTimeout(redirect, 3000);
-	
-	function redirect() {
-		window.location.href="https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/";
-	}
+<!DOCTYPE html>
+<meta charset=utf-8>
+<title>Wait for it…</title>
+<meta http-equiv=refresh content="3; URL=https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/">
+<script>
+	setTimeout(function() {
+		location.href = 'https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/';
+	}, 3000);
 </script>
-</body>
-</html>
