--- a/inter.html
+++ b/inter.html
@@ -20,7 +20,7 @@
 			border:10px solid #323A43;
 			border-radius:40px;
 			background:#090;
-			background:linear-gradient(#28BD00, #177500);
+			background:linear-gradient(#D44, #992F2F);
 			color:#FFF;
 			font:100px/1 sans-serif;
 			}
@@ -29,7 +29,7 @@
 			}
 		@-webkit-keyframes press {
 			99% {
-				background:linear-gradient(#28BD00, #177500);
+				background:linear-gradient(#D44, #992F2F);
 				margin-top:-100px;
 				}
 			100% {
