--- a/inter.html
+++ b/inter.html
@@ -14,27 +14,32 @@
 			position:absolute;
 			top:45%;
 			left:50%;
-			margin:-100px 0 0 -290px;
-			width:580px;
+			margin:-100px 0 0 -275px;
+			padding:0 0 0 60px;
+			width:550px;
 			height:200px;
 			border:10px solid #323A43;
 			border-radius:40px;
-			background:#090;
-			background:linear-gradient(#D44, #992F2F);
+			background:#D44 no-repeat;
+			background:
+				url(cross.png) 80px 50% no-repeat,
+				linear-gradient(#D44, #992F2F) no-repeat;
 			color:#FFF;
-			font:100px/1 sans-serif;
+			font:80px/1 sans-serif;
 			}
 		.loaded .button {
 			-webkit-animation:press 0.5s 0.6s 1 linear forwards;
 			}
 		@-webkit-keyframes press {
 			99% {
-				background:linear-gradient(#D44, #992F2F);
+				background:
+					url(cross.png) 80px 50% no-repeat,
+					linear-gradient(#D44, #992F2F) no-repeat;
 				margin-top:-100px;
 				}
 			100% {
 				margin-top:-90px;
-				background:#181B21;
+				background:#181B21 url(spinner.gif) 80px 50% no-repeat;
 				}
 			}
 		/* Hand */
