--- a/inter.html
+++ b/inter.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Wait for it…</title>
 	<meta charset="utf-8">
-	<!-- <meta http-equiv=refresh content="3; URL=https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/"> -->
+	<meta http-equiv=refresh content="3; URL=https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/">
 	<style>
 		html, body {
 			overflow:hidden;
@@ -63,9 +63,9 @@
 		window.addEventListener('load', function (e) {
 			document.body.className = 'loaded';
 		}, false);
-		// setTimeout(function() {
-		// 	location.href = 'https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/';
-		// }, 3000);
+		setTimeout(function() {
+			location.href = 'https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/';
+		}, 3000);
 	</script>
 </body>
 </html>
